High-res svg icons for the renderview toolbar.
Replace the .png icons in the view toolbar with .svg versions from
Steve Jordan. These vector drawings will scale to any needed size.
Start replacing usage of .png other places as well.

--- a/Qt/ApplicationComponents/Resources/UI/pqEditMenuBuilder.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqEditMenuBuilder.ui
@@ -79,7 +79,7 @@
   <action name="actionCopyScreenshotToClipboard">
    <property name="icon">
     <iconset resource="../../../Components/Resources/pqComponents.qrc">
-     <normaloff>:/pqWidgets/Icons/pqCaptureScreenshot24.png</normaloff>:/pqWidgets/Icons/pqCaptureScreenshot24.png</iconset>
+     <normaloff>:/pqWidgets/Icons/pqCaptureScreenshot.svg</normaloff>:/pqWidgets/Icons/pqCaptureScreenshot.svg</iconset>
    </property>
    <property name="text">
     <string>&amp;Copy Screenshot to Clipboard</string>
