--- a/Qt/ApplicationComponents/Resources/UI/pqFileMenuBuilder.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqFileMenuBuilder.ui
@@ -37,7 +37,7 @@
   <action name="actionFileSaveScreenshot">
    <property name="icon">
     <iconset resource="../../../Components/Resources/pqComponents.qrc">
-     <normaloff>:/pqWidgets/Icons/pqCaptureScreenshot24.png</normaloff>:/pqWidgets/Icons/pqCaptureScreenshot24.png</iconset>
+     <normaloff>:/pqWidgets/Icons/pqCaptureScreenshot.svg</normaloff>:/pqWidgets/Icons/pqCaptureScreenshot.svg</iconset>
    </property>
    <property name="text">
     <string>Save Screenshot...</string>
