--- a/Qt/Components/Resources/pqComponents.qrc
+++ b/Qt/Components/Resources/pqComponents.qrc
@@ -26,6 +26,7 @@
         <file>Icons/pqCancel16.png</file>
         <file>Icons/pqCancel24.png</file>
         <file>Icons/pqCancel32.png</file>
+        <file>Icons/pqCaptureScreenshot.svg</file>
         <file>Icons/pqCaptureScreenshot24.png</file>
         <file>Icons/pqCellCenterData16.png</file>
         <file>Icons/pqCellData16.png</file>
@@ -46,8 +47,11 @@
         <file>Icons/pqEdgeCenterData16.png</file>
         <file>Icons/pqEdgeMapData16.png</file>
         <file>Icons/pqEdgeSetData16.png</file>
+        <file>Icons/pqEditCamera.svg</file>
         <file>Icons/pqEditCamera16.png</file>
+        <file>Icons/pqInteractionMode2D.svg</file>
         <file>Icons/pqInteractionMode2D16.png</file>
+        <file>Icons/pqInteractionMode3D.svg</file>
         <file>Icons/pqInteractionMode3D16.png</file>
         <file>Icons/pqEditColor24.png</file>
         <file>Icons/pqEditScalarBar16.png</file>
@@ -106,7 +110,6 @@
         <file>Icons/pqLinkIn16d.png</file>
         <file>Icons/pqLock24.png</file>
         <file>Icons/pqMeasure24.png</file>
-        <file>Icons/pqMinus16.png</file>
         <file>Icons/pqMouseMove15.png</file>
         <file>Icons/pqMousePick15.png</file>
         <file>Icons/pqMouseSelect15.png</file>
@@ -145,7 +148,9 @@
         <file>Icons/PluginYellow.png</file>
         <file>Icons/pqPointData16.png</file>
         <file>Icons/pqPolydata16.png</file>
+        <file>Icons/pqPolygonSelectSurfaceCell.svg</file>
         <file>Icons/pqPolygonSelectSurfaceCell24.png</file>
+        <file>Icons/pqPolygonSelectSurfacePoint.svg</file>
         <file>Icons/pqPolygonSelectSurfacePoint24.png</file>
         <file>Icons/pqPrint22.png</file>
         <file>Icons/pqProbeLocation24.png</file>
@@ -157,6 +162,7 @@
         <file>Icons/pqRedo16.png</file>
         <file>Icons/pqRedo24.png</file>
         <file>Icons/pqRedo32.png</file>
+        <file>Icons/pqRedoCamera.svg</file>
         <file>Icons/pqRedoCamera24.png</file>
         <file>Icons/pqReset24.png</file>
         <file>Icons/pqResetCamera16.png</file>
@@ -196,13 +202,19 @@
         <file>Icons/pqSelect16.png</file>
         <file>Icons/pqSelect24.png</file>
         <file>Icons/pqSelect32.png</file>
+        <file>Icons/pqSelectBlock.svg</file>
         <file>Icons/pqSelectBlock24.png</file>
+        <file>Icons/pqSelectChart.svg</file>
         <file>Icons/pqSelectChart16.png</file>
+        <file>Icons/pqSelectChartPolygon.svg</file>
         <file>Icons/pqSelectChartPolygon16.png</file>
         <file>Icons/pqSelectFrustPoints24.png</file>
+        <file>Icons/pqSelectMinus.svg</file>
         <file>Icons/pqSelectMinus16.png</file>
+        <file>Icons/pqSelectPlus.svg</file>
         <file>Icons/pqSelectPlus16.png</file>
         <file>Icons/pqSelectSurfPoints24.png</file>
+        <file>Icons/pqSelectToggle.svg</file>
         <file>Icons/pqSelectToggle16.png</file>
         <file>Icons/pqSeparateColorMap24.png</file>
         <file>Icons/pqServer16.png</file>
@@ -236,12 +248,18 @@
         <file>Icons/pqStep24.png</file>
         <file>Icons/pqStreamTracer24.png</file>
         <file>Icons/pqStructuredGrid16.png</file>
+        <file>Icons/pqSurfaceHoveringPoint.svg</file>
         <file>Icons/pqSurfaceHoveringPoint.png</file>
+        <file>Icons/pqSurfaceHoveringCell.svg</file>
         <file>Icons/pqSurfaceHoveringCell.png</file>
         <file>Icons/pqSurfaceHoveringCell@2x.png</file>
+        <file>Icons/pqSurfaceSelectionCell.svg</file>
         <file>Icons/pqSurfaceSelectionCell24.png</file>
+        <file>Icons/pqSurfaceSelectionCellInteractive.svg</file>
         <file>Icons/pqSurfaceSelectionCellInteractive.png</file>
+        <file>Icons/pqSurfaceSelectionPointInteractive.svg</file>
         <file>Icons/pqSurfaceSelectionPointInteractive.png</file>
+        <file>Icons/pqSurfaceSelectionPoint.svg</file>
         <file>Icons/pqSurfaceSelectionPoint24.png</file>
         <file>Icons/pqThreshold24.png</file>
         <file>Icons/pqTopCenter32.png</file>
@@ -250,6 +268,7 @@
         <file>Icons/pqUndo16.png</file>
         <file>Icons/pqUndo24.png</file>
         <file>Icons/pqUndo32.png</file>
+        <file>Icons/pqUndoCamera.svg</file>
         <file>Icons/pqUndoCamera24.png</file>
         <file>Icons/pqUniformData16.png</file>
         <file>Icons/pqUnknownData16.png</file>
