--- a/Plugins/OpenVR/pqOpenVRControls.ui
+++ b/Plugins/OpenVR/pqOpenVRControls.ui
@@ -140,6 +140,19 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="resetPositionsButton">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Reset all positions</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QCheckBox" name="navigationPanel">
         <property name="minimumSize">
          <size>
