More SVG icons, mostly in the file menu.
All uses of a png are replaced by the equivalent svg.
Some file menu icons are added.
All icons produced by Steve Jordan at Kitware.

--- a/Qt/ApplicationComponents/Resources/UI/pqColorOpacityEditorWidget.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqColorOpacityEditorWidget.ui
@@ -176,7 +176,7 @@
          </property>
          <property name="icon">
           <iconset resource="../../../Components/Resources/pqComponents.qrc">
-           <normaloff>:/pqWidgets/Icons/pqSave16.png</normaloff>:/pqWidgets/Icons/pqSave16.png</iconset>
+           <normaloff>:/pqWidgets/Icons/pqSave.svg</normaloff>:/pqWidgets/Icons/pqSave.svg</iconset>
          </property>
         </widget>
        </item>
