--- a/Qt/Components/Resources/UI/pqFindDataSelectionDisplayFrame.ui
+++ b/Qt/Components/Resources/UI/pqFindDataSelectionDisplayFrame.ui
@@ -92,7 +92,7 @@
      </property>
      <property name="icon">
       <iconset resource="../pqComponents.qrc">
-       <normaloff>:/pqWidgets/Icons/pqFrustumSelectionCell24.png</normaloff>:/pqWidgets/Icons/pqFrustumSelectionCell24.png</iconset>
+       <normaloff>:/pqWidgets/Icons/pqFrustumSelectionCell.svg</normaloff>:/pqWidgets/Icons/pqFrustumSelectionCell.svg</iconset>
      </property>
      <property name="checkable">
       <bool>true</bool>
