--- a/Qt/ApplicationComponents/Resources/UI/pqExportInspector.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqExportInspector.ui
@@ -65,7 +65,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../../Components/Resources/pqComponents.qrc">
-         <normaloff>:/pqWidgets/Icons/pqHelp16.png</normaloff>:/pqWidgets/Icons/pqHelp16.png</iconset>
+         <normaloff>:/pqWidgets/Icons/pqHelp.svg</normaloff>:/pqWidgets/Icons/pqHelp.svg</iconset>
        </property>
       </widget>
      </item>
