--- a/Qt/Components/Resources/UI/pqFindDataSelectionDisplayFrame.ui
+++ b/Qt/Components/Resources/UI/pqFindDataSelectionDisplayFrame.ui
@@ -64,7 +64,7 @@
      </property>
      <property name="icon">
       <iconset resource="../pqComponents.qrc">
-       <normaloff>:/pqWidgets/Icons/pqCellData16.png</normaloff>:/pqWidgets/Icons/pqCellData16.png</iconset>
+       <normaloff>:/pqWidgets/Icons/pqCellData.svg</normaloff>:/pqWidgets/Icons/pqCellData.svg</iconset>
      </property>
     </widget>
    </item>
@@ -78,7 +78,7 @@
      </property>
      <property name="icon">
       <iconset resource="../pqComponents.qrc">
-       <normaloff>:/pqWidgets/Icons/pqPointData16.png</normaloff>:/pqWidgets/Icons/pqPointData16.png</iconset>
+       <normaloff>:/pqWidgets/Icons/pqPointData.svg</normaloff>:/pqWidgets/Icons/pqPointData.svg</iconset>
      </property>
     </widget>
    </item>
