--- a/Qt/Components/Resources/UI/pqMultiBlockInspectorWidget.ui
+++ b/Qt/Components/Resources/UI/pqMultiBlockInspectorWidget.ui
@@ -61,7 +61,7 @@
        </property>
        <property name="icon">
         <iconset resource="../pqComponents.qrc">
-         <normaloff>:/pqWidgets/Icons/pqHelp16.png</normaloff>:/pqWidgets/Icons/pqHelp16.png</iconset>
+         <normaloff>:/pqWidgets/Icons/pqHelp.svg</normaloff>:/pqWidgets/Icons/pqHelp.svg</iconset>
        </property>
        <property name="checkable">
         <bool>true</bool>
