--- a/Qt/Components/Resources/UI/pqPropertiesPanel.ui
+++ b/Qt/Components/Resources/UI/pqPropertiesPanel.ui
@@ -43,7 +43,7 @@
        </property>
        <property name="icon">
         <iconset resource="../pqComponents.qrc">
-         <normaloff>:/pqWidgets/Icons/pqCancel16.png</normaloff>:/pqWidgets/Icons/pqCancel16.png</iconset>
+         <normaloff>:/pqWidgets/Icons/pqReset.svg</normaloff>:/pqWidgets/Icons/pqReset.svg</iconset>
        </property>
       </widget>
      </item>
@@ -65,7 +65,7 @@
        </property>
        <property name="icon">
         <iconset resource="../pqComponents.qrc">
-         <normaloff>:/pqWidgets/Icons/pqHelp16.png</normaloff>:/pqWidgets/Icons/pqHelp16.png</iconset>
+         <normaloff>:/pqWidgets/Icons/pqHelp.svg</normaloff>:/pqWidgets/Icons/pqHelp.svg</iconset>
        </property>
        <property name="shortcut">
         <string>Ctrl+H</string>
