Svg icons, batch-3 - add pqCancel.svg replacing std icon
Also rework the edge and edgeSet icons.

--- a/Qt/ApplicationComponents/Resources/UI/pqColorMapEditor.ui
+++ b/Qt/ApplicationComponents/Resources/UI/pqColorMapEditor.ui
@@ -142,7 +142,7 @@
            </property>
            <property name="icon">
             <iconset resource="../../../Components/Resources/pqComponents.qrc">
-             <normaloff>:/pqWidgets/Icons/pqSave.svg</normaloff>:/pqWidgets/Icons/pqSave.svg</iconset>
+             <normaloff>:/pqWidgets/Icons/pqReset.svg</normaloff>:/pqWidgets/Icons/pqReset.svg</iconset>
            </property>
           </widget>
          </item>
