--- a/Qt/Components/Resources/pqComponents.qrc
+++ b/Qt/Components/Resources/pqComponents.qrc
@@ -25,6 +25,7 @@
         <file>Icons/pqBundle32.png</file>
         <file>Icons/pqCalculator24.png</file>
         <file>Icons/pqCamera.svg</file>
+        <file>Icons/pqCancel.svg</file>
         <file>Icons/pqCaptureScreenshot.svg</file>
         <file>Icons/pqCellCenterData.svg</file>
         <file>Icons/pqCellData.svg</file>
